--- a/index.html
+++ b/index.html
@@ -9,19 +9,17 @@
   .control-group { display: flex; gap: 8px; }
   input[type='text'] { padding: 10px; font-size: 16px; border: 2px solid #6b3fa0; border-radius: 4px; }
   #bookInput { width: 70%; }
-  #searchInput { display: none; width: 70%; }
+  #searchInput { width: 70%; }
   button { padding: 10px 20px; font-size: 16px; background: #6b3fa0; color: white; border: none; cursor: pointer; border-radius: 4px; }
   button:hover { background: #5a2f88; }
   .icon-button { padding: 10px 15px; font-size: 18px; }
   #bookList { margin-top: 30px; }
   .book-item { background: white; padding: 15px; margin-bottom: 10px; border-radius: 4px; border-left: 5px solid #6b3fa0; box-shadow: 0 2px 4px rgba(107, 63, 160, 0.1); display: flex; justify-content: space-between; align-items: center; }
   .book-item p { margin: 0; font-size: 18px; color: #333; flex: 1; }
-  .delete-btn { background: #d9534f; padding: 8px 12px; font-size: 14px; margin-left: 10px; display: none; }
-  .delete-btn.show { display: inline-block; }
+  .delete-btn { background: #d9534f; padding: 8px 12px; font-size: 14px; margin-left: 10px; }
   .delete-btn:hover { background: #c9302c; }
   .search-results { margin-top: 30px; }
   .search-title { color: #6b3fa0; font-weight: bold; margin-bottom: 10px; }
-  .hidden { display: none; }
   .empty-message { color: #999; font-style: italic; }
 </style>
 
@@ -36,7 +34,7 @@
   <button class='icon-button' title='Delete Mode' onclick='toggleDeleteMode()'>🗑️</button>
 </div>
 
-<div id='searchSection' class='hidden'>
+<div id='searchSection' style='display: none; margin-bottom: 20px;'>
   <input type='text' id='searchInput' placeholder='Search books...' onkeyup='searchBooks()' />
   <div id='searchResults' class='search-results'></div>
 </div>
@@ -49,7 +47,6 @@
   
   let allBooks = [];
   let deleteMode = false;
-  let searchMode = false;
 
   async function loadBooks() {
     const response = await fetch(`${SUPABASE_URL}/rest/v1/books?order=name.asc`, {
@@ -79,26 +76,25 @@
     list.innerHTML = displayBooks.map(book => `
       <div class='book-item'>
         <p>${book.name}</p>
-        <button class='delete-btn ${deleteMode ? 'show' : ''}' onclick='deleteBook(${book.id})'>Delete</button>
+        <button class='delete-btn' onclick='deleteBook(${book.id})' style='display: ${deleteMode ? "inline-block" : "none"};'>Delete</button>
       </div>
     `).join('');
   }
 
   function toggleDeleteMode() {
     deleteMode = !deleteMode;
-    const deleteButtons = document.querySelectorAll('.delete-btn');
-    deleteButtons.forEach(btn => {
-      btn.classList.toggle('show');
-    });
+    displayBooks();
   }
 
   function toggleSearch() {
-    searchMode = !searchMode;
     const searchSection = document.getElementById('searchSection');
-    searchSection.classList.toggle('hidden');
-    if (searchMode) {
+    const isHidden = searchSection.style.display === 'none';
+    
+    if (isHidden) {
+      searchSection.style.display = 'block';
       document.getElementById('searchInput').focus();
     } else {
+      searchSection.style.display = 'none';
       document.getElementById('searchResults').innerHTML = '';
       document.getElementById('searchInput').value = '';
     }
@@ -124,7 +120,7 @@
     resultsDiv.innerHTML = '<div class="search-title">Search Results:</div>' + results.map(book => `
       <div class='book-item'>
         <p>${book.name}</p>
-        <button class='delete-btn ${deleteMode ? 'show' : ''}' onclick='deleteBook(${book.id})'>Delete</button>
+        <button class='delete-btn' onclick='deleteBook(${book.id})' style='display: ${deleteMode ? "inline-block" : "none"};'>Delete</button>
       </div>
     `).join('');
   }
