--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@
   input[type='text'] { padding: 10px; font-size: 16px; border: 2px solid #6b3fa0; border-radius: 4px; }
   #bookInput { width: 70%; }
   #searchInput { width: 70%; }
+    body { font-family: Arial; max-width: 600px; margin: 0 auto; padding: 20px; background: #f3f0f7; }
+  h1 { color: #6b3fa0; text-align: center; }
+  .controls { display: flex; gap: 10px; margin-bottom: 20px; flex-wrap: wrap; }
+  .control-group { display: flex; gap: 8px; }
+  input[type='text'] { padding: 10px; font-size: 16px; border: 2px solid #6b3fa0; border-radius: 4px; }
+  #bookInput { width: 70%; }
+  #searchInput { width: 70%; }
   textarea { padding: 10px; font-size: 14px; border: 2px solid #6b3fa0; border-radius: 4px; width: 100%; font-family: Arial; min-height: 120px; }
   button { padding: 10px 20px; font-size: 16px; background: #6b3fa0; color: white; border: none; cursor: pointer; border-radius: 4px; }
   button:hover { background: #5a2f88; }
   .icon-button { padding: 10px 15px; font-size: 18px; }
   .bulk-section { background: white; padding: 15px; border-radius: 4px; margin-bottom: 20px; border: 2px solid #6b3fa0; }
   .bulk-section h3 { margin-top: 0; color: #6b3fa0; }
-  #bulkBooksTextarea { display: none; }
   .bulk-buttons { display: none; gap: 10px; margin-top: 10px; }
   .bulk-buttons.show { display: flex; }
   #bookList { margin-top: 30px; }
@@ -27,6 +33,7 @@
   .search-results { margin-top: 30px; }
   .search-title { color: #6b3fa0; font-weight: bold; margin-bottom: 10px; }
   .empty-message { color: #999; font-style: italic; }
+
 </style>
 
 <h1>💜 Baby Violet's Books</h1>
