--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
   
   <h1>💜 Baby Violet's Books</h1>
 
-  <div class='controls'>
-    <div class='control-group'>
-      <input type='text' id='bookInput' placeholder='Enter book name...' />
-      <button onclick='addBook()'>Add Book</button>
-    </div>
-    <button class='icon-button' title='Search' onclick='toggleSearch()'>🔍</button>
-    <button class='icon-button' title='Bulk Add' onclick='toggleBulkMode()'>📝</button>
-    <button class='icon-button' title='Delete Mode' onclick='toggleDeleteMode()'>🗑️</button>
+ <div class='controls'>
+  <div class='control-group'>
+    <input type='text' id='bookInput' placeholder='Enter book name...' />
+    <button onclick='addBook()'>Add Book</button>
   </div>
+  
+  <div class='action-buttons'>
+    <button onclick='toggleSearch()'>🔍 Search</button>
+    <button onclick='toggleBulkMode()'>📝 Bulk Add</button>
+    <button onclick='toggleDeleteMode()'>🗑️ Delete</button>
+  </div>
+</div>
+
 
   <div id='bulkSection' class='bulk-section' style='display: none;'>
     <h3>Bulk Add Books</h3>
